--- a/resources/build.properties
+++ b/resources/build.properties
@@ -70,9 +70,13 @@ ant.description=ProcessingLibs Ant build file.
 
 # (4)
 # Project details.
-# Give your library a name.
+# Give your library a name. The name must not contain spaces or special characters.
 
 project.name=YourLibrary
+
+# The name as the user will see it. This can contain spaces and special characters.
+
+project.prettyName=Your Library
 
 
 # Use 'normal' or 'fast' as value for project.compile.
