Cleaned up properties files.

--- a/resources/build.properties
+++ b/resources/build.properties
@@ -153,12 +153,11 @@ library.version=1
 
 
 # The version as the user will see it. 
-# If blank, the library.version attribute will be used here.
 
-library.prettyVersion=0.1.1
+library.prettyVersion=1.0.0
 
 
-library.copyright=(C) 2012
+library.copyright=(c) 2013
 library.dependencies=?
 library.keywords=?
 
