added eliza source code, script file, example

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>processing-library-template</name>
+	<name>eliza</name>
 	<comment></comment>
 	<projects>
 	</projects>
