--- a/resources/build.properties
+++ b/resources/build.properties
@@ -17,7 +17,7 @@
 # For windows the default path to your sketchbook would be
 # ${user.home}/My Documents/Processing (make adjustments below).
 
-sketchbook.location=${user.home}/Documents/Processing
+sketchbook.location=${user.home}/Coding/Processing/sketchbook
 
 
 
@@ -72,11 +72,11 @@ ant.description=ProcessingLibs Ant build file.
 # Project details.
 # Give your library a name. The name must not contain spaces or special characters.
 
-project.name=YourLibrary
+project.name=eliza
 
 # The name as the user will see it. This can contain spaces and special characters.
 
-project.prettyName=Your Library
+project.prettyName=eliza
 
 
 # Use 'normal' or 'fast' as value for project.compile.
@@ -98,14 +98,14 @@ project.compile=normal
 # If you need more control, you can edit web/index.html and
 # web/library.properties directly.
 
-author.name=Your Name
-author.url=http://yoururl.com
+author.name=Andres Colubri
+author.url=http://interfaze.info/
 
 
 # Set the web page for your library.
 # This is NOT a direct link to where to download it.
 
-library.url=http://yourlibraryname.com
+library.url=http://interfaze.info/libraries/eliza/
 
 
 # Set the category of your library. This must be one (or many) of the following:
@@ -116,7 +116,7 @@ library.url=http://yourlibraryname.com
 # If a value other than those listed is used, your library will listed as 
 # "Other".
 
-library.category=Other
+library.category=Language
 
 
 # A short sentence (or fragment) to summarize the library's function. This will 
@@ -125,7 +125,7 @@ library.category=Other
 # like mentioning that it's a library. This should start with a capitalized 
 # letter, and end with a period.
 
-library.sentence=A collection of utilities for solving this and that problem.
+library.sentence=The classic Eliza psychologist program.
 
 
 # Additional information suitable for the Processing website. The value of
@@ -133,15 +133,15 @@ library.sentence=A collection of utilities for solving this and that problem.
 # second sentence here. If your library only works on certain operating systems,
 # mention it here.
 
-library.paragraph= 
+library.paragraph=Based on the <a href="http://chayden.net/eliza/Eliza.html">Java implementation by Charles Hayden</a>, faithful to the original 1966 version. 
 
 
 # Set the source code repository for your project.
 # Recommendations for storing your source code online are Google Code or GitHub.
 
-source.host=Google Code
-source.url=http://code.google.com/p/yourProject
-source.repository=http://code.google.com/p/yourProject/source/browse/
+source.host=GitHub
+source.url=https://github.com/codeanticode/eliza
+source.repository=https://github.com/codeanticode/eliza
 
 
 # The current version of your library. 
@@ -158,11 +158,11 @@ library.prettyVersion=1.0.0
 
 
 library.copyright=(c) 2013
-library.dependencies=?
-library.keywords=?
+library.dependencies=
+library.keywords=eliza, chatbot, AI, natural language
 
-tested.platform=osx,windows
-tested.processingVersion=1.5
+tested.platform=osx, windows, linux
+tested.processingVersion=2.0.2
 
 
 # Include javadoc references into your project's javadocs.
