--- a/resources/build.properties
+++ b/resources/build.properties
@@ -72,11 +72,11 @@ ant.description=ProcessingLibs Ant build file.
 # Project details.
 # Give your library a name. The name must not contain spaces or special characters.
 
-project.name=eliza
+project.name=Eliza
 
 # The name as the user will see it. This can contain spaces and special characters.
 
-project.prettyName=eliza
+project.prettyName=Eliza
 
 
 # Use 'normal' or 'fast' as value for project.compile.
@@ -140,7 +140,7 @@ library.paragraph=Based on the <a href="http://chayden.net/eliza/Eliza.html">Jav
 # Recommendations for storing your source code online are Google Code or GitHub.
 
 source.host=GitHub
-source.url=https://github.com/codeanticode/eliza
+source.url=https://github.com/
 source.repository=https://github.com/codeanticode/eliza
 
 
@@ -157,7 +157,7 @@ library.version=1
 library.prettyVersion=1.0.0
 
 
-library.copyright=(c) 2013
+library.copyright=(c) 2007-13
 library.dependencies=
 library.keywords=eliza, chatbot, AI, natural language
 
