updated homepage url

--- a/resources/build.properties
+++ b/resources/build.properties
@@ -99,13 +99,13 @@ project.compile=normal
 # web/library.properties directly.
 
 author.name=Andres Colubri
-author.url=http://interfaze.info/
+author.url=http://andrescolubri.net/
 
 
 # Set the web page for your library.
 # This is NOT a direct link to where to download it.
 
-library.url=http://interfaze.info/libraries/eliza/
+library.url=http://processing.andrescolubri.net/libraries/eliza/
 
 
 # Set the category of your library. This must be one (or many) of the following:
